1.6.0
-----
1. If connected to MPD>=0.19 using address 127.0.01, then pass local files as
   'file://' URLS.

1.5.1
-----
1. Show correct separators for windows builds.
2. Supply TagLib 1.9.1 for windows builds.
3. Convert filename to UTF16 before passing to TagLib for windows builds.
4. When emiting signal to say cover is loaded, need to adjust size by pixel
   ratio.
5. Fix updating of toolbar coverwidget if cover is downloaded after song has
   started.
6. Fix compilation when online services disabled.

1.5.0.1
-------
1. Add missing libtag.dll to windows setup.

1.5.0
-----
 1. Remove cover size setting, set automatically.
 2. Artist images only shown in grid view.
 3. No images, or icons, shown in basic tree view.
 4. Remove GUI option to control saving of scaled covers. This is enabled by
    default, and can be toggled via the config file.
 5. Don't re-load view when sort changes.
 6. Simplify view config pages.
 7. Use QUrl with server details to build HTTP address used to compare MPD http
    file paths against.
 8. Store song ratings in MPD's sticker DB. Ratings stored using 'rating' key
    and values 0 to 10. In the UI, ratings are show as 5 stars.
 9. If we fail to download a cover, don't keep trying next time song is played.
10. Simplify toolbar cover widget, no border.
11. Allow preference dialog to shrink smaller. If screen size is less than
    800px, then views page is re-arranged to allow much smaller dialog,
    category selector uses smaller icons, and headers are removed.. You can
    check this setting by calling cantata as follows: CANTATA_NETBOOK=1 cantata
12. Support MPDs "find modified-since" with MPD 0.19 and newer. If a number is
    entered it is taken to be 'modified since X days in past', otherwise a date
    should be entered (e.g. 01/12/2001 to find all tracks since 1st Dec 2001)
    Cantata will first try to convert from your locale date format, default
    date format, and then ISO date format.
13. Show covers in search results.