@@ -48,6 +48,7 @@ private:
     void addView(const QString &v, const QString &prop);
 
 private Q_SLOTS:
+    void libraryViewChanged();
     void playlistsViewChanged();
     void playQueueViewChanged();
     void forceSingleClickChanged();
