@@ -167,6 +167,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0" colspan="2">
+           <widget class="QCheckBox" name="libraryArtistImage">
+            <property name="text">
+             <string>Show artist images</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
