@@ -2,6 +2,7 @@
 -----
 1. If connected to MPD>=0.19 using address 127.0.01, then pass local files as
    'file://' URLS.
+2. Re-add option to show artist images in tree and list views.
 
 1.5.1
 -----
